--- a/weatherApiConsoleApplication/weatherApiConsoleApplication/packages.config
+++ b/weatherApiConsoleApplication/weatherApiConsoleApplication/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cpprestsdk" version="2.8.0" targetFramework="native" />
+  <package id="cpprestsdk.v110.winxp.msvcstl.dyn.rt-dyn" version="2.5.0" targetFramework="native" />
   <package id="cpprestsdk.v120.winapp.msvcstl.dyn.rt-dyn" version="2.8.0" targetFramework="native" />
   <package id="cpprestsdk.v120.windesktop.msvcstl.dyn.rt-dyn" version="2.8.0" targetFramework="native" />
   <package id="cpprestsdk.v120.winphone.msvcstl.dyn.rt-dyn" version="2.8.0" targetFramework="native" />
